# Medical-JSON

./: BENCHMARK.md  LICENSE  README.md  WRITEUP.md  pyproject.toml
benchmark_configs/: rtx4060_full.json
data/cord/: manifest.json
data/cord/test/annotations/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  (+60 more)
scripts/: create_samples.py  download_cord.py  download_dataset.py  eval_cord.py  preflight_gpu.py  run_benchmark.py
src/lab_extractor/: __init__.py  __main__.py  cord.py
src/lab_extractor/engine/: __init__.py  medgemma.py  prompts.py
src/lab_extractor/evaluation/: __init__.py  evaluate.py  metrics.py
src/lab_extractor/pipeline/: __init__.py  classify.py  extract.py  flag.py  preprocess.py  runner.py  validate.py
src/lab_extractor/preprocessing/: __init__.py  image_ops.py
src/lab_extractor/schemas/: __init__.py  config.py  lab_report.py  pipeline.py  reference_ranges.py
tests/: __init__.py  conftest.py  test_cli.py  test_cord.py  test_engine.py  test_pipeline.py  test_preprocessing.py  test_reference_ranges.py  test_schemas.py
